--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -1022,7 +1022,7 @@ Version:1.0
 	padding: 0;
 	margin: 0;
 	top: 20px;
-	float: right;
+	/* float: right; */
 	position: relative;
 }
 .header.shop .right-bar .sinlge-bar.top-search a {
